# l19_lang

./: l19.cabal
grammar/: g.output  g.tab.c  g.y
src/: Lexer.hs  Parser.hs  Syntax.hs  main.hs
